commit 12/12/2025 13:38